@@ -1,6 +1,8 @@
 Sigil v0.1.3 <ADD DATE>
+    - fixed issue with removing headings from TOC in TOC editor (issue #88, part 2);
+    also made TOC editor updates to headings MUCH more robust
     - all headings are now by default included in TOC... heuristics for "guessing" which
-    headings the users wants have been removed (issue #88)
+    headings the users wants have been removed (issue #88, part 1)
     - fixed critical issue with Sigil hanging when loading certain SGF files (issue #87)
     - fixed rare issue with duplicate image loading (issue #86)
     - implemented a workaround for a webkit bug causing the first character of a heading
